scripts/athleticism-vpc.template
# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance with the License. 
# A copy of the License is located at
#    http://aws.amazon.com/apache2.0/
# or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
# either express or implied. See the License for the specific language governing permissions and limitations under the License.

AWSTemplateFormatVersion: '2010-09-09'
Description: This CloudFormation Template to support Athleticism.

Parameters:
  AccessCidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Description: The CIDR IP range that is permitted to SSH to bastion instance. Note - a value of 0.0.0.0/0 will allow access from ANY IP address.
    Type: String
    Default: 0.0.0.0/0  

  VPCcidr:
    Description: (optional to change) CIDR IP Range for your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.0.0/16
  p1cidr:
    Description: (optional to change) CIDR IP Range for the public subnet in AZ 'a' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.0.0/24
  p2cidr:
    Description: (optional to change) CIDR IP Range for the public subnet in AZ 'b' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.1.0/24
  a1cidr:
    Description: (optional to change) CIDR IP Range for the application subnet in AZ 'a' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.2.0/24
  a2cidr:
    Description: (optional to change) CIDR IP Range for the application subnet in AZ 'b' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.3.0/24
  d1cidr:
    Description: (optional to change) CIDR IP Range for the database subnet in AZ 'b' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.4.0/24
  d2cidr:
    Description: (optional to change) CIDR IP Range for the database subnet in AZ 'b' of your Athleticism VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    Default: 10.1.5.0/24

Resources:
  vpc27bc775f:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCcidr
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'false'
      Tags:
        - Key: Name
          Value: AthleticismVPC


#Defines Internet Connectivity
  igw8d9149f4:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PHP IGW
  gw1:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'vpc27bc775f'
      InternetGatewayId: !Ref 'igw8d9149f4'



#Defines NAT Gateway so that the Elastic Beanstalk servers and the temporary EC2 server can talk to the Internet
  NAT:
    DependsOn: gw1
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'EIP.AllocationId'
      SubnetId: !Ref 'subnetd3e13a98'
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc


  #Defines two availability zones of subnets for the three tier network architecture
  subnet3d504d67:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref d2cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "b" ] ]
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismDataZoneB
  subnet864d50dc:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref a2cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "b" ] ]
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismAppZoneB
  subnet7aee3531:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref d1cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "a" ] ]
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismDataZoneA
  subnetbae43ff1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref a1cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "a" ] ]
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismAppZoneA
  subnetd3e13a98:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref p1cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "a" ] ]
      MapPublicIpOnLaunch: 'True'
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismPublicZoneA
  subnet2c5c4176:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref p2cidr
      AvailabilityZone: !Join [ "", [ !Ref 'AWS::Region', "b" ] ]
      MapPublicIpOnLaunch: 'True'
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: AthleticismPublicZoneB
  


#Security Groups for the three tiered network architecture
  AppSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Application Servers
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: App Security Group
  DataSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Databases
      VpcId: !Ref 'vpc27bc775f'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3306'
        ToPort: '3306'
        SourceSecurityGroupId: !Ref 'AppSG'
      Tags:
        - Key: Name
          Value: AthleticismDBSG


  
#Route tables and route definitions for the three tiered network architecture
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'rtb425bda38'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref 'NAT'
  rtb425bda38:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'vpc27bc775f'
  rtb3756d74d:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'vpc27bc775f'
      Tags:
        - Key: Name
          Value: PublicAccess  
  subnetroute1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb3756d74d'
      SubnetId: !Ref 'subnet2c5c4176'
  subnetroute2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb3756d74d'
      SubnetId: !Ref 'subnetd3e13a98'
  subnetroute3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb425bda38'
      SubnetId: !Ref 'subnet3d504d67'
  subnetroute4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb425bda38'
      SubnetId: !Ref 'subnet864d50dc'
  subnetroute5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb425bda38'
      SubnetId: !Ref 'subnet7aee3531'
  subnetroute6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'rtb425bda38'
      SubnetId: !Ref 'subnetbae43ff1'
  route2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref 'rtb3756d74d'
      GatewayId: !Ref 'igw8d9149f4'
    DependsOn: gw1  


#Return the created resources to the Master template
Outputs:
  VPCId:
    Value: !Ref 'vpc27bc775f'
  SubnetPublicA:
    Value: !Ref 'subnetd3e13a98'
  SubnetPublicB:
    Value: !Ref 'subnet2c5c4176'
  SubnetAppA:
    Value: !Ref 'subnetbae43ff1'
  SubnetAppB:
    Value: !Ref 'subnet864d50dc'
  SubnetDataA:
    Value: !Ref 'subnet7aee3531'
  SubnetDataB:
    Value: !Ref 'subnet3d504d67'
  SGApp:
    Value: !Ref 'AppSG'
  SGData:
    Value: !Ref 'DataSG'
